catching Darren up

--- a/code/app/templates/index.html
+++ b/code/app/templates/index.html
@@ -1,3 +1,12 @@
-<html>
-    <h1> Hello World using render_template() by {{ author }}</h1>
-</html>
+{% extends "bootstrap/base.html" %}
+{% block title %}This is an example page{% endblock %}
+
+{% block navbar %}
+<div class="navbar navbar-fixed-top">
+  <!-- ... -->
+</div>
+{% endblock %}
+
+{% block content %}
+  <h1>Hello, Bootstrap</h1>
+{% endblock %}
