nav bar and home page

--- a/code/app/templates/index.html
+++ b/code/app/templates/index.html
@@ -1,12 +1,13 @@
 {% extends "bootstrap/base.html" %}
-{% block title %}This is an example page{% endblock %}
+
+{% block title %}
+ARMR
+{% endblock %}
 
 {% block navbar %}
-<div class="navbar navbar-fixed-top">
-  <!-- ... -->
-</div>
+	{% include 'navbar.html' %}
 {% endblock %}
 
 {% block content %}
-  <h1>Hello, Bootstrap</h1>
+  <h1>Hello, ARMR</h1>
 {% endblock %}
