--- a/code/app/templates/navbar.html
+++ b/code/app/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse no-space-navbar" role="navigation">
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;" role="navigation">
   <div class="navbar-collapse collapse">
     <ul class="nav navbar-nav navbar-left">
       <li class="nav-item">
