--- a/code/app/templates/index.html
+++ b/code/app/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "bootstrap/base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}
 ARMR
@@ -11,10 +12,21 @@ ARMR
 {% block content %}
 <div align="center">
     <figure class="figure">
-    <img src={{ url_for('static', filename='logo.png') }} class="figure-img img-fluid img-rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+    <img src={{ url_for('static', filename='logo.png') }} class="figure-img img-fluid img-rounded">
     </figure>
 
     <br>
     <h1>Audio Recorded Medical Record</h1>
+</div>
+
+<div class="container">
+    <form method="POST">
+        <h2>Login</h2>
+        {{ form.hidden_tag() }}
+        {{ wtf.form_field(form.username) }}
+        {{ wtf.form_field(form.password) }}
+        <center> {{ wtf.form_field(form.submit)}} </center>
+    </form>
+</br>
 </div>
 {% endblock %}
