--- a/code/app/templates/index.html
+++ b/code/app/templates/index.html
@@ -10,22 +10,35 @@ ARMR
 {% endblock %}
 
 {% block content %}
+
+<style>
+    .container {
+      width: 20vw;
+      border-style: solid;
+      border-width: 1px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      border-color: rgba(128,128,128);
+    }
+</style>
+
 <div align="center">
     <figure class="figure">
-    <img src={{ url_for('static', filename='logo.png') }} class="figure-img img-fluid img-rounded">
+    <img src={{ url_for('static', filename='logo2.png') }} class="figure-img img-fluid img-rounded">
     </figure>
 
     <br>
     <h1>Audio Recorded Medical Record</h1>
 </div>
+<br>
 
-<div class="container">
+<div class="container" style="border-width: thin;">
     <form method="POST">
-        <h2>Login</h2>
+        <br>
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.username) }}
         {{ wtf.form_field(form.password) }}
-        <center> {{ wtf.form_field(form.submit)}} </center>
+        <center>{{ wtf.form_field(form.submit)}}</center>
     </form>
 </br>
 </div>
