create new account

--- a/code/app/templates/index.html
+++ b/code/app/templates/index.html
@@ -39,7 +39,7 @@ ARMR
         <center>{{ wtf.form_field(form.submit)}}</center>
     </form>
     <br>
-    <center><a href="/register">Create new account</a></center>
+    <center><a href="{{url_for('register')}}">Create new account</a></center>
     <br>
 </div>
 {% endblock %}
