--- a/code/app/templates/register.html
+++ b/code/app/templates/register.html
@@ -5,18 +5,34 @@
 Register
 {% endblock %}
 
-{% block content %}
-<div class="container">
+{% block navbar %}
+    {% include 'navbar.html' %}
+{% endblock %}
 
+{% block content %}
+
+<style>
+    .container {
+      width: 50vw;
+      border-style: solid;
+      border-width: 1px;
+      margin-bottom: 10px;
+      border-color: rgba(128,128,128);
+    }
+</style>
+
+<center><h2>Create New Account</h2></center>
+<div class="container">
+    <br>
     <form method="POST"> <!-- post : handle submission -->
-        <h2>Sign Up</h2>
         {{ form.hidden_tag() }}    
         {{ wtf.form_field(form.username) }}
         {{ wtf.form_field(form.password) }}
         {{ wtf.form_field(form.password_confirmation) }}
         <center> {{ wtf.form_field(form.submit)}} </center>
     </form>
-    <br/>
-    <center> Already have an account? <a href="login">Log in</a> </center>
+    <br>
+    <center> Already have an account? <a href="/">Log in</a> </center>
+    <br>
 </div> <!-- /container -->
 {% endblock %}
