--- a/code/app/templates/navbar.html
+++ b/code/app/templates/navbar.html
@@ -11,7 +11,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="nav-item">
-          <a class="nav-link active" href="/login">Login</a>
+          <a class="nav-link active" href="/">Login</a>
       </li>
     </ul>
   </div>
