upload page finished

--- a/code/app/templates/upload.html
+++ b/code/app/templates/upload.html
@@ -11,15 +11,26 @@ File Upload
 
 {% block content %}
 
-<center><h2>File Upload</h2></center>
+<style>
+    .container {
+      width: 25vw;
+      border-style: solid;
+      border-width: 1px;
+      margin-bottom: 10px;
+      border-color: rgba(128,128,128);
+    }
+</style>
+
+<center><h2>Upload Audio</h2></center>
 <br>
 
 <div class="container">
+	<br>
     <form method="POST" enctype="multipart/form-data"> <!-- post : handle submission -->
         {{ form.csrf_token }} <!--  render the form's CSRF field like normal. -->
         {{ wtf.form_field(form.file_selector) }}
         <br/>
-        {{ form.submit }}
+        {{ wtf.form_field(form.submit)}}
     </form>
     <br/>
 </div> <!-- /container -->
