--- a/code/app/templates/login.html
+++ b/code/app/templates/login.html
@@ -11,6 +11,7 @@ Login
         <h2>Login</h2>
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.username) }}
+        {{ wtf.form_field(form.email) }}
         {{ wtf.form_field(form.password) }}
         <center> {{ wtf.form_field(form.submit)}} </center>
     </form>
