--- a/code/app/templates/navbar.html
+++ b/code/app/templates/navbar.html
@@ -10,9 +10,19 @@
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
+      {% if current_user.is_authenticated %}
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#"> {{ current_user.username }}
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="logout">Logout</a></li>
+        </ul>
+      </li>
+      {% else %}
       <li class="nav-item">
           <a class="nav-link active" href="/">Login</a>
       </li>
+      {% endif %}
     </ul>
   </div>
 </nav>
