--- a/code/app/templates/results.html
+++ b/code/app/templates/results.html
@@ -12,38 +12,42 @@ Results
 {% block content %}
 <style>
 	.text_box {
-	  width: 30vw;
+	  width: 75vw;
       border-style: solid;
-      border-width: 2px;
+      border-width: 3px;
       margin-bottom: 10px;
       border-color: rgba(0,0,0);
       padding-left: 15px;
+      padding-right: 15px;
+      font-size: medium;
 	}
 </style>
 
 
-<center><h1>Results Page</h1></center>
+<center><h1>Results</h1></center>
 
+{% for key, value in result.items() %}
 <div class="container">
-	<h2>Diagnosis</h2>
+	<h2>{{ key.title() }}</h2>
 	<div class="text_box">
-		<h4>Diseases</h4>
-			<ul>
-			  <li>Flu</li>
-			  <li>Cold</li>
-			</ul>
+		<h4>Transcription:</h4>
+		{{ '\t' + value['text'] }}
+
+		<h4>Diseases:</h4>
+		<ul>
+			{% for d in value['diseases'] %}
+				<li>{{ d['name'].title() }}</li>
+			{% endfor %}
+		</ul>
+
+		<h4>Medications:</h4>
+		<ul>
+			{% for d in value['medications'] %}
+				<li>{{ d['name'].title() }}</li>
+			{% endfor %}
+		</ul>
 	</div>
 </div>
-
-<div class="container">
-	<h2>Perscription</h2>
-	<div class="text_box">
-		<h4>Chemicals</h4>
-			<ul>
-			  <li>Antibiotics</li>
-			  <li>Tylenol</li>
-			</ul>
-	</div>
-</div>
+{% endfor %}
 
 {% endblock %}
