--- a/code/app/templates/navbar.html
+++ b/code/app/templates/navbar.html
@@ -15,7 +15,7 @@
         <a class="dropdown-toggle" data-toggle="dropdown" href="#"> {{ current_user.username }}
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="logout">Logout</a></li>
+          <li><a href="/logout">Logout</a></li>
         </ul>
       </li>
       {% else %}
