submit button on results page that redirects upload

--- a/code/app/templates/results.html
+++ b/code/app/templates/results.html
@@ -50,4 +50,11 @@ Results
 </div>
 {% endfor %}
 
+<br>
+ <form method="POST"> <!-- post : handle submission -->
+    {{ form.hidden_tag() }}    
+    <center> {{ wtf.form_field(form.submit)}} </center>
+</form>
+<br>
+
 {% endblock %}
