--- a/code/app/templates/index.html
+++ b/code/app/templates/index.html
@@ -27,7 +27,7 @@ ARMR
 
 <div align="center">
     <figure class="figure">
-    <img src={{ url_for('static', filename='logo2.png') }} class="figure-img img-fluid img-rounded">
+    <img src={{ url_for('static', filename='logo_ftw.png') }} class="figure-img img-fluid img-rounded">
     </figure>
 
     <h1>Audio Recorded Medical Record</h1>
