--- a/code/app/templates/index.html
+++ b/code/app/templates/index.html
@@ -30,7 +30,7 @@ ARMR
     <img src={{ url_for('static', filename='logo_ftw.png') }} class="figure-img img-fluid img-rounded">
     </figure>
 
-    <h1>Audio Recorded Medical Record</h1>
+    <h1>Audio Recorded Medical Records</h1>
 </div>
 <br>
 
