--- a/code/app/templates/results.html
+++ b/code/app/templates/results.html
@@ -12,7 +12,7 @@ Results
 {% block content %}
 <style>
 	.text_box {
-	  width: 75vw;
+	  width: 90%;
       border-style: solid;
       border-width: 3px;
       margin-bottom: 10px;
